fix div containers to align with phase 1 instructions

--- a/recipe/styles.css
+++ b/recipe/styles.css
@@ -4,6 +4,14 @@
   font-style: normal;
 }
 
+a:link {
+    color: greenyellow
+}
+
+a:visited {
+    color: orange
+}
+
 body {
     background-color: #8A6043;
 }
